--- a/SDL_LogMessageV.mediawiki
+++ b/SDL_LogMessageV.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma camelcase off -->
-'''DRAFT'''
 
 = SDL_LogMessageV =
 Use this function to log a message with the specified category and priority.  This version of [[SDL_LogMessage]] uses a stdarg variadic argument list.
@@ -17,10 +16,10 @@ void SDL_LogMessageV(int             category,
 == Function Parameters ==
 {|
 |'''category'''
-|the category to ^specify^
+|the category of the message; see [[#category|Remarks]] for details
 |-
 |'''priority'''
-|the [[SDL_LogPriority]] to ^specify^; see [[#Remarks|Remarks]] for details
+|the priority of the message; see [[#priority|Remarks]] for details
 |-
 |'''fmt'''
 |a printf() style message format string
@@ -35,10 +34,13 @@ You can add your code example here
 ```
 
 == Remarks ==
-'''priority''' may be one of the following ^or NULL ???^:
-<<Include(SDL_LogPriority, , , from="Start Include here.", to="##End Include here.")>>
+<span id="category"></span>
+The '''category''' can be one of:
+<<Include(SDL_LOG_CATEGORY, , , from="== Values ==", to="== Code Examples ==")>>
 
-<<Color2(green,Should there be some reference to [[SDL_LOG_CATEGORY]] for '''category'''?)>>
+<span id="priority"></span>
+The '''priority''' can be one of:
+<<Include(SDL_LogPriority, , , from="Start Include here.", to="##End Include here.")>>
 
 == Related Functions ==
 :[[SDL_Log]]
