--- a/CategoryLog.mediawiki
+++ b/CategoryLog.mediawiki
@@ -13,8 +13,9 @@
 
 This category contains functions for handling simple log messages with categories and priorities.
 
-By default logs are quiet, but if you're debugging SDL you might want:
+<<Include(SDL_LogPriority, , , from="Start Include Default Priority", to="## End Include Default Priority")>>
 
+If you're debugging SDL you might want to call:
  ```SDL_LogSetAllPriority(SDL_LOG_PRIORITY_WARN);```
 
 Here's where the messages go on different platforms:
