--- a/SDL_DropEvent.mediawiki
+++ b/SDL_DropEvent.mediawiki
@@ -22,7 +22,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-[[SDL_DropEvent]] is a member of the [[SDL_Event]] union and is used when an event of type SDL_DROPFILE is reported. You would access it through the event's '''drop''' field.
+[[SDL_DropEvent]] is a member of the [[SDL_Event]] union and is used when an event of type SDL_DROPFILE is reported. You would access it through the event's <code>drop</code> field.
 
 This event is disabled by default.  You can enable it with [[SDL_EventState]]().  
 
