--- a/SDL_QuitEvent.mediawiki
+++ b/SDL_QuitEvent.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma camelcase off -->
-'''DRAFT'''
 
 = SDL_QuitEvent =
 A structure that contains the "quit requested" event.
@@ -19,20 +18,15 @@ You can add your code example here
 ```
 
 == Remarks ==
-*<br/>[[SDL_QuitEvent]] is a member of the [[SDL_Event]] union and is used when an event of type SDL_QUIT is reported.  ^You would access it through the event's <code>quit</code> field.^
+[[SDL_QuitEvent]] is a member of the [[SDL_Event]] union and is used when an event of type SDL_QUIT is reported.  You would access it through the event's <code>quit</code> field.
 
-,,As can be seen, ,,the [[SDL_QuitEvent]] structure serves no useful purpose ^itself^. The event ,,itself,, ^it describes/defines/contains???^, on the other hand, is very important. If you filter out or ignore a quit event then it is impossible for the user to close the window. On the other hand, if you do accept a quit event then the application window will be closed, and screen updates will still report success even though the application will no longer be visible.
- Note: The macro [[SDL_QuitRequested]]() will return non-zero if a quit event is pending. <br/>*
+Please refer to [[SDL_EventType#SDL_QUIT|the discussion of SDL_QUIT]] for more details.
 
 == Related Enumerations ==
-:[[SDL_EventMask]] ???
-:[[SDL_EventType]] ???
+:[[SDL_EventType]]
 
 == Related Structures ==
 :[[SDL_Event]]
-
-== Related Functions ==
-:[[SDL_SetEventFilter]] *
 
 ----
 [[CategoryStruct]], [[CategoryEvents]]
