--- a/SDL_BlendMode.mediawiki
+++ b/SDL_BlendMode.mediawiki
@@ -10,14 +10,35 @@ An enumeration of blend modes used in [[SDL_RenderCopy]]() and drawing operation
 |SDL_BLENDMODE_NONE
 |no blending
 |-
+| 
+|dstRGBA = srcRGBA
+|-
 |SDL_BLENDMODE_BLEND
-|dst = (src * A) + (dst * (1-A))
+|alpha blending
+|-
+| 
+|dstRGB = (srcRGB * srcA) + (dstRGB * (1-srcA))
+|-
+| 
+|dstA = srcA + (dstA * (1-srcA))
 |-
 |SDL_BLENDMODE_ADD
-|dst = (src * A) + dst
+|additive blending
+|-
+| 
+|dstRGB = (srcRGB * srcA) + dstRGB
+|-
+| 
+|dstA = dstA
 |-
 |SDL_BLENDMODE_MOD
-|dst = src * dst
+|color modulate
+|-
+| 
+|dstRGB = srcRGB * dstRGB
+|-
+| 
+|dstA = dstA
 |}
 
 == Code Examples ==
