--- a/SDL_RWops.mediawiki
+++ b/SDL_RWops.mediawiki
@@ -138,7 +138,7 @@ Applications and libraries rolling their own RWops implementations should use SD
 
 === Hidden Union ===
 
-Applications can ignore this union completely. All of the fields in this union are platform-specific and off-limits, used internally by SDL, with one exception. You may use the '''unknown'' struct to store your own RWops implementation's data, possibly cleaning it up during the '''close''' method. If your data doesn't fit in two pointers, use these pointers to hold an allocated structure that contains the real data.
+Applications can ignore this union completely. All of the fields in this union are platform-specific and off-limits, used internally by SDL, with one exception. You may use the '''unknown''' struct to store your own RWops implementation's data, possibly cleaning it up during the '''close''' method. If your data doesn't fit in two pointers, use these pointers to hold an allocated structure that contains the real data.
 
 == Related Functions ==
 :[[SDL_AllocRW]]
