--- a/SDL_UserEvent.mediawiki
+++ b/SDL_UserEvent.mediawiki
@@ -9,7 +9,7 @@ A structure that contains an application-defined event type.
 {|
 |Uint32
 |'''type'''
-|SDL_USEREVENT through SDL_NUMEVENTS-1
+|Value obtained from [[SDL_RegisterEvents]]()
 |-
 |Uint32
 |'''windowID'''
@@ -30,23 +30,27 @@ A structure that contains an application-defined event type.
 
 == Code Examples ==
 ```c++
-SDL_Event event;
-SDL_zero(event);
-event.type = SDL_USEREVENT;
-event.user.code = my_event_code;
-event.user.data1 = significant_data;
-event.user.data2 = 0;
-SDL_PushEvent(&event);
+Uint32 myEventType = SDL_RegisterEvents(1);
+if (myEventType != -1) {
+    SDL_Event event;
+    SDL_zero(event);
+    event.type = myEventType;
+    event.user.code = my_event_code;
+    event.user.data1 = significant_data;
+    event.user.data2 = 0;
+    SDL_PushEvent(&event);
+}
 ```
 
 == Remarks ==
-[[SDL_UserEvent]] is in the '''user''' member of the [[SDL_Event]] union. This event is unique; it is never created by SDL but only by the application. The event can be pushed onto the event queue using [[SDL_PushEvent]](). The contents of the structure members are completely up to the programmer; the only requirement is that '''type''' is a value from SDL_USEREVENT to SDL_NUMEVENTS-1 (inclusive).
+[[SDL_UserEvent]] is in the '''user''' member of the [[SDL_Event]] union. This event is unique; it is never created by SDL but only by the application. The event can be pushed onto the event queue using [[SDL_PushEvent]](). The contents of the structure members are completely up to the programmer; the only requirement is that '''type''' is a value obtained from [[SDL_RegisterEvents]]().
 
 == Related Enumerations ==
 :[[SDL_EventType]]
 
 == Related Functions ==
-:[[SDL_PushEvent]] *
+:[[SDL_RegisterEvent]]
+:[[SDL_PushEvent]]
 
 ----
 [[CategoryStruct]], [[CategoryEvents]]
