--- a/SDL_RegisterEvents.mediawiki
+++ b/SDL_RegisterEvents.mediawiki
@@ -23,7 +23,7 @@ The beginning event number, or (Uint32)-1 if there are not enough user-defined e
 <<Include(SDL_UserEvent, , , from="== Code Examples ==", to="== Remarks ==")>>
 
 == Remarks ==
-Registering zero events is an error and will return (Uint32)-1.
+Calling this function with '''numevents''' <= 0 is an error and will return (Uint32)-1.
 
 == Related Functions ==
 :[[SDL_PushEvent]]
